# goldlane

./: Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
docs/: diagram.drawio  stage-1.md  stage-2.md  stage-3.md
src/main/kotlin/com/example/api/: Application.kt
src/main/kotlin/com/example/api/plugins/: Routing.kt
src/main/kotlin/com/example/calculator/: calculator.kt
src/main/rust/: app.rs  backend.rs  main.rs  types.rs
