[package]
name = "goldlane-app"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "goldlane-app"
path = "src/main/rust/main.rs"

[dependencies]
yew = "0.19.3"
reqwest = { version = "0.11.10", features = ["json", "serde_json"]}
serde = "1.0.5"
futures = "0.3.21"
gloo-console = "0.2.1"
